--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:aOzhthV/RTCRzi0z9V42/1QwqQIuH0guk8Ao2wse+CU=
+APP_KEY=base64:UkPQXJAsfgaArEX7O5+ZdOjSAOX+av+N0XBk+p/Ex94=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,9 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mongodb
-DB_URI=mongodb://aelsadany:Admin_1233789@cluster0-shard-00-00.9t8nq.mongodb.net:27017,cluster0-shard-00-01.9t8nq.mongodb.net:27017,cluster0-shard-00-02.9t8nq.mongodb.net:27017/mongo_test?ssl=true&replicaSet=atlas-cmd1wg-shard-0&authSource=admin&retryWrites=true&w=majority
-
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=mongo_task
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
