--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,10 @@
         "jenssegers/mongodb": "^3.8",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-          "yajra/laravel-datatables": "^1.5",
+        "laravel/tinker": "^2.5",
+        "yajra/laravel-datatables": "^1.5",
         "yajra/laravel-datatables-buttons": "^4.10",
-        "yajra/laravel-datatables-oracle": "^9.15",
-        "laravel/tinker": "^2.5"
+        "yajra/laravel-datatables-oracle": "^9.15"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
